fixed spacing between 'we'll transform your ideas' and bottom of our work

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ letter-spacing: 0.04em;
     line-height: 35px;
     /* identical to box height */
     letter-spacing: 0.04em;
+    margin-top: 100px; 
     color: blue;
 }
 /* End */
